fix: correção de erros e melhorias

--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.5.1",
     "mysql2": "^3.10.3",
     "nodemailer": "^6.9.14",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "ws": "^8.18.0"
   }
 }
