--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   backend:
     build: ./backend
     ports:
-      - "3000:3000"
+      - "8080:8080"
     environment:
       - DB_HOST=mysql
       - DB_USER=root
@@ -18,9 +18,15 @@ services:
   frontend:
     build: ./frontend
     ports:
-      - "3001:3000"
+      - "3000:3000"
     depends_on:
       - backend
+
+
+  websocket:
+    build: ./websocket
+    ports:
+      - "3001:3001"
 
   mysql:
     image: mysql:5.7
