fix: realizado melhoria no código

--- a/.env
+++ b/.env
@@ -1,8 +1,4 @@
-DB_NAME=todo
+DB_HOST=mysql
 DB_USER=root
-DB_PASSWORD=admin
-DB_HOST=localhost
-SECRET_KEY=your_jwt_secret_key
-EMAIL_USER=teste@todo.com
-EMAIL_PASS=teste
-
+DB_PASSWORD=password
+DB_NAME=coopers_db
