--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: "3"
 
 services:
+  
+  mysql:
+    image: mysql:5.7
+    restart: always
+    ports:
+      - "3307:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: admin
+      MYSQL_DATABASE: coopers_db
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+  
   backend:
     build: ./backend
     ports:
@@ -8,7 +20,7 @@ services:
     environment:
       - DB_HOST=mysql
       - DB_USER=root
-      - DB_PASSWORD=password
+      - DB_PASSWORD=admin
       - DB_NAME=coopers_db
     depends_on:
       - mysql
@@ -21,19 +33,8 @@ services:
       - "3000:3000"
     depends_on:
       - backend
-
-
+  
   websocket:
     build: ./websocket
     ports:
       - "3001:3001"
-
-  mysql:
-    image: mysql:5.7
-    ports:
-      - "3307:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: coopers_db
-    volumes:
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
